--- a/.gitignore
+++ b/.gitignore
@@ -5,5 +5,6 @@ node_modules
 /package
 .env
 /data/extra
-/data/temp/*
+/data/temp/parkplatz-transform-prepaired.json
+/data/temp/streets
 notes.txt
