--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"async": "^3.2.3",
 		"glob": "^7.2.0",
 		"mapshaper": "^0.5.88",
-		"papaparse": "^5.3.1"
+		"papaparse": "^5.3.1",
+		"request": "^2.88.2"
 	}
 }
